c/examples/writing-a-c-compiler-tests/tests/chapter_3/valid/div.c
int main(void) {
    return 4 / 2;
}