c/examples/writing-a-c-compiler-tests/tests/chapter_3/invalid_parse/extra_credit/bitwise_double_operator.c
int main(void) {
    // we should lex this as two | operators, not a single || operator,
    // even after we add || in the next chapter
    return 1 | | 2;
}